css/styles.css
/* JM, 03/11/26 */

@font-face {
  font-family: "Corporate-Logo-Rounded-Bold";
  src:
    url("../assets/fonts/Corporate-Logo-Rounded-Bold-ver3.woff2")
      format("woff2"),
    url("../assets/fonts/Corporate-Logo-Rounded-Bold-ver3.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Root styles */

:root {
  font-size: 18pt;
  font-size: clamp(18pt, calc(1vw + (0.6 * 18pt)), calc(1.125 * 18pt));
  --dodgerblue: hsl(210, 100%, 56%);
  --navy-blue: hsl(251, 52%, 13%);
  --yellow: hsl(58, 73%, 62%);
  --orange: hsl(17, 100%, 68%);
  --red: hsl(1, 82%, 66%);
  --white: hsl(240, 9%, 90%);

  box-sizing: border-box;
  line-height: 1.4;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html,
body {
  margin: 0;
  padding: 0;
  max-width: 100vw;
}

/* Double container */

.wrapper {
  max-width: 100%;
  display: grid;
  grid-template-columns: [left] auto [content] 1fr auto [right];

  background-color: var(--navy-blue);
  color: var(--white);
}

main {
  display: grid;
  grid-template-columns: [left] 1fr [content] 92.5vw 1fr [right];
}

.wrapper > *,
main > * {
  grid-column: content;
}

.full-bleed {
  grid-column: left / right;
  width: 100%;
}

/* General selectors */

/* main .full-bleed {
  padding-left: 3.75vw;
  padding-right: 3.75vw;
} */

/* main section,
main > aside {
  margin: 2em 0;

  & h2 {
    margin-top: 0;
  }
} */

p,
figcaption {
  max-width: 70ch;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Electrolize", "Times New Roman", Times, serif;
  margin: 0;
  text-align: center;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.75em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.25em;
}

p,
a {
  font-family: "Ubuntu", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

a {
  color: var(--yellow);
}

img {
  max-width: 100%;
}

/* Header */

.header {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
  background-color: var(--navy-blue);

  position: sticky;
  z-index: 1000;
  top: 0;
}

.header .JM-logo svg {
  width: 5rem;
}

/* Hamburger Navigation */

nav {
  position: relative;
  justify-self: right;
}

input.hamburger {
  display: none;
}

menu {
  opacity: 0;

  position: absolute;
  right: 0;

  list-style-type: none;
  line-height: 2;
  padding: 1em 1em 1em 1.5em;
  margin: 0;
  border-radius: 1.5em 0 0 1.5em;

  transform: translateX(10em);
  transition:
    transform 300ms ease-out,
    opacity 100ms;
}

menu::after {
  content: "";
  display: block;
  width: 150%;
  height: 100%;
  position: absolute;
  z-index: -1;
  inset: 0;
  transform: translateX(10em);
  transition: transform 400ms;
  transition-delay: 400ms;
  transition-timing-function: cubic-bezier(0.23, 0.395, 0.58, 1.23);

  background-color: var(--yellow);
  box-shadow: 0 0 0.2em 0.05em var(--yellow);
  border-radius: 1em 0 0 1em;
}

.hamburger:checked ~ menu {
  opacity: 1;
  transform: translateX(0);
}

.hamburger:checked ~ menu::after {
  transform: translateX(0);
}

.hamburger__button {
  padding: 0.5em;
  width: 2.4em;
  height: 2.4em;
  aspect-ratio: 1;
  position: relative;
  z-index: 100;
}

.hamburger__button::after {
  content: "";
  display: block;
  width: 150%;
  height: 100%;
  position: absolute;
  z-index: -1;
  inset: 0;
  transform: translateX(3em);
  transition: transform 400ms;
  transition-delay: 400ms;
  transition-timing-function: cubic-bezier(0.23, 0.395, 0.58, 1.23);

  background-color: var(--yellow);
  box-shadow: 0 0 0.2em 0.05em var(--yellow);
  border-radius: 0.5em 0 0;
}

.hamburger:checked + label .hamburger__button::after {
  transform: translateX(0);
}

/* Buns */

.hamburger__button .bar {
  border-bottom: 0.125em solid var(--white);
  transition:
    transform 200ms ease-out,
    opacity 100ms,
    border-color 100ms 500ms;
}

.hamburger__button .bar ~ .bar {
  margin-top: 0.4em;
}

.hamburger:checked + label .bar {
  border-color: var(--navy-blue);
}

.hamburger:checked + label .bar--top {
  transform: scale(1.1) translateY(0.55em) rotate(45deg);
}

.hamburger:checked + label .bar--middle {
  transform: translateX(5em);
  opacity: 0;
}

.hamburger:checked + label .bar--bottom {
  transform: scale(1.1) translateY(-0.35em) rotate(-45deg);
}

menu li > a,
menu li > a:link,
menu li > a:visited {
  color: var(--yellow);
  transition: color 200ms 400ms;
}

.hamburger:checked ~ menu li > a {
  color: var(--navy-blue);
}

/* Hero */

.hero h2 {
  margin: 2em 0 0;
}

.hero {
  position: relative;
  padding: 4rem 0;
}

.three-d-face {
  position: absolute;
  top: 2rem;
  left: calc(50% - 2.5em);

  max-width: 5em;
}

/* Salutation */

.salutation__window {
  display: block;
  grid-template-columns: 1fr;
  max-height: calc(1em * 1.4);

  overflow: hidden;
}

.salutation__glass {
  display: block;
  animation: greeting-carousel 10s ease-in-out infinite;
}

.salutation__glass span {
  display: block;
}

.salutation__window .japanese {
  font-family:
    "Corporate-Logo-Rounded-Bold", "ヒラギノ角ゴ Pro W3",
    "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, sans-serif;
}

.salutation__window .japanese span {
  display: none;
}

.salutation__window .japanese .time {
  display: block;
}

@keyframes greeting-carousel {
  0% {
    transform: translateY(0%);
  }
  24%,
  37% {
    transform: translateY(-22%);
  }
  54%,
  67% {
    transform: translateY(-50%);
  }
  84%,
  100% {
    transform: translateY(-75%);
  }
}

.hero .JM-logo svg {
  max-width: 3em;
  vertical-align: middle;
}

/* About */

.about .JM-logo svg {
  max-width: 3em;
  vertical-align: middle;
}

/* Projects */

.projects ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.projects__button {
  display: block;
  background-color: transparent;
  padding: 0;
  margin: 0;
  border: none;
}

.projects__card {
  margin: 0;
  position: relative;
}

.projects__card h3 {
  position: absolute;
  top: 0;
}

.picture-container {
  overflow: hidden;
  aspect-ratio: 9 / 16;

  & .projects__picture {
    aspect-ratio: 9 / 16;
    object-fit: contain;
    object-position: 0% 0%;
  }
}

.projects__desc .projects__picture {
  max-width: 90vw;
}

.projects__desc [class*="project-logo"] {
  max-width: 5em;
  max-height: 5em;
  aspect-ratio: 1;
}

/* JM tag logo animation */

.JM-logo svg {
  display: inline-block;
  object-fit: cover;
  aspect-ratio: 1 / 0.5;
  height: auto;
}

.JM-logo path {
  stroke-dasharray: 1050;
  stroke-dashoffset: 1050;
}

.JM-logo__j,
.JM-logo__m {
  animation: JM-logo 1.5s forwards ease-out;
  /* animation-play-state: paused; */
}

.JM-logo__j {
  animation-delay: 1s;
}

.JM-logo__m {
  animation-delay: 1.4625s;
}

.JM-logo__m-tail {
  animation: JM-logo 100ms both;
  animation-delay: 2.325s;
  /* animation-play-state: paused; */
}

@keyframes JM-logo {
  from {
    stroke-dashoffset: 1050;
  }
  to {
    stroke-dashoffset: 0;
  }
}

/* Footer */

.footer {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
  background-color: var(--navy-blue);
}

.footer .JM-logo svg {
  width: 5em;
}

.footer menu {
  bottom: 2.4em;
}

.footer .hamburger__button::after {
  border-radius: 0 0 0 0.5em;
}

@media (min-width: 32em) {
  .projects__card {
    aspect-ratio: 4 / 3;

    & .projects__picture {
      aspect-ratio: 4 / 3;
    }
  }
}

@media (min-width: 42em) {
  .projects__card {
    aspect-ratio: 16 / 9;

    & .projects__picture {
      aspect-ratio: 16 / 9;
    }
  }
}

@media (min-width: 60em) {
}

